--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,9 +20,11 @@
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
+            android:layout_marginLeft="200dp"
+            android:layout_marginTop="200dp"
             android:id="@+id/bee_lftig1"
             android:src="@mipmap/bee_right"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
         <ImageView
             android:layout_width="70dp"
             android:layout_height="70dp"
@@ -42,9 +44,25 @@
             android:layout_height="70dp"
             android:id="@+id/bee_rgtig1"
             android:layout_marginLeft="1200dp"
+            android:layout_marginTop="50dp"
             android:src="@mipmap/bee_left"
             android:visibility="visible"/>
-
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:id="@+id/bee_rgtig2"
+            android:layout_marginLeft="1200dp"
+            android:layout_marginTop="180dp"
+            android:src="@mipmap/bee_left"
+            android:visibility="visible"/>
+        <ImageView
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:id="@+id/bee_rgtig3"
+            android:layout_marginLeft="1200dp"
+            android:layout_marginTop="270dp"
+            android:src="@mipmap/bee_left"
+            android:visibility="visible"/>
 
 
         <ImageView
